--- a/client/src/App.css
+++ b/client/src/App.css
@@ -95,7 +95,7 @@ body {
   /* cursor: none; */
   background-image: linear-gradient(
     to right,
-    rgb(0, 252, 147),
+    rgb(252, 0, 197),
     rgb(0, 68, 255)
   );
 
@@ -149,12 +149,26 @@ body {
   position: absolute;
   left: 50px;
   top: 50px;
-  width: 300px;
-  height: 300px;
-  -webkit-filter: blur(60px);
+  width: 100px;
+  height: 100px;
+  -webkit-filter: blur(30px);
   z-index: 0;
   border-radius: 50%;
   box-shadow: 20px 10px 20px 20000px rgba(0, 0, 0, 0.95);
+  -webkit-transition: all 0.1s ease;
+}
+
+.largehole {
+  position: absolute;
+  left: 50px;
+  top: 50px;
+  width: 500px;
+  height: 500px;
+  -webkit-filter: blur(30px);
+  z-index: 0;
+  border-radius: 50%;
+  box-shadow: 20px 10px 20px 20000px rgba(0, 0, 0, 0.95);
+  -webkit-transition: all 0.2s ease;
 }
 
 .listcontainer {
@@ -220,4 +234,8 @@ body {
 .addbutton {
   z-index: 40;
   max-width: 50%;
+}
+
+.large {
+  font-size: 50px;
 }
