--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,11 +1,6 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+  font-family: "pressura_light";
 }
 
 .App-header {
@@ -65,6 +60,21 @@
   font-weight: normal;
   font-style: normal;
 }
+
+body {
+  width: 98.5vw;
+  height: 97.5vh;
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  word-break: break-all;
+  border: 10px solid black;
+  box-shadow: 0 0 0 2000px black;
+  border-radius: 35px;
+  margin: 0px;
+  /* cursor: none; */
+}
+
 ::-webkit-scrollbar {
   display: none;
 }
@@ -219,15 +229,7 @@
 .large {
   font-size: 50px;
 }
-.navbar {
-  padding: 20px;
-  display: flex;
-  flex-direction: row;
-  /* background-color: white; */
-  align-items: center;
-  justify-content: space-between;
-  /* width: 100vw; */
-}
+
 .head-menu ul {
   list-style: none;
   padding: 0;
@@ -250,5 +252,13 @@
   width: 600px;
   margin: auto;
   height: 200px;
+  justify-content: space-between;
+}
+
+.navbar {
+  padding: 20px;
+  font-size: 1.5rem;
+  background-color: none;
+  display: flex;
   justify-content: space-between;
 }
