--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,8 @@
 .App {
   text-align: center;
+  font-family: "pressura_light";
+  color: #9031f3;
+  background-color: #ddd4ca;
 }
 
 .App-logo {
@@ -32,9 +35,6 @@
   }
 }
 
-
-
-
 /* calles css */
 
 @font-face {
@@ -55,32 +55,45 @@
 
 @font-face {
   font-family: "pressura_light";
-  src: url("./exp-mode/fonts/gt-pressura-pro-mono-light-webfont.woff2") format("woff2"),
-    url("./exp-mode/fonts/gt-pressura-pro-mono-light-webfont.woff") format("woff");
+  src: url("./exp-mode/fonts/gt-pressura-pro-mono-light-webfont.woff2")
+      format("woff2"),
+    url("./exp-mode/fonts/gt-pressura-pro-mono-light-webfont.woff")
+      format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "pressura_reg";
-  src: url("./exp-mode/fonts/gt-pressura-pro-mono-regular-webfont.woff2") format("woff2"),
-    url("./exp-mode/fonts/gt-pressura-pro-mono-regular-webfont.woff") format("woff");
+  src: url("./exp-mode/fonts/gt-pressura-pro-mono-regular-webfont.woff2")
+      format("woff2"),
+    url("./exp-mode/fonts/gt-pressura-pro-mono-regular-webfont.woff")
+      format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
 body {
+  /* cursor: none; */
+}
+
+.border {
+  position: fixed;
   width: 98.5vw;
-  height: 97.5vh;
+  height: 98vh;
   display: flex;
   justify-content: center;
   justify-items: center;
   word-break: break-all;
-  border: 10px solid black;
+  border-top: 1vh solid black;
+  border-bottom: 1vh solid black;
+  border-left: 0.75vw solid black;
+  border-right: 0.75vw solid black;
   box-shadow: 0 0 0 2000px black;
   border-radius: 35px;
   margin: 0px;
-  /* cursor: none; */
+  overflow: scroll;
+  pointer-events: none;
 }
 
 ::-webkit-scrollbar {
@@ -152,7 +165,7 @@ body {
   -webkit-filter: blur(30px);
   z-index: 0;
   border-radius: 50%;
-  box-shadow: 20px 10px 20px 20000px rgba(0, 0, 0, 0.95);
+  box-shadow: 20px 10px 20px 20000px rgba(3, 0, 12, 0.95);
   -webkit-transition: all 0.1s ease;
 }
 
@@ -195,34 +208,6 @@ body {
   background-color: white;
 }
 
-.spin .square {
-  position: absolute;
-  z-index: -10;
-  top: 50%;
-  left: 50%;
-  width: 80px;
-  height: 80px;
-  margin: -60px 0 0 -60px;
-  -webkit-animation: spin 3s ease-in infinite;
-  -moz-animation: spin 3s linear infinite;
-  animation: spin 3s linear infinite;
-}
-@-moz-keyframes spin {
-  100% {
-    -moz-transform: rotate(360deg);
-  }
-}
-@-webkit-keyframes spin {
-  100% {
-    -webkit-transform: rotate(360deg);
-  }
-}
-@keyframes spin {
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
 .buttonbox {
   display: flex;
   align-items: center;
@@ -252,7 +237,6 @@ body {
 }
 .head-menu a {
   text-decoration: none;
-  color: black;
 }
 .auth-form {
   display: flex;
