--- a/client/src/AppMain.css
+++ b/client/src/AppMain.css
@@ -9,6 +9,7 @@
   user-select: none;
  }
  body {
+  background-color: #161616;
   background-image: linear-gradient(red, yellow);
   overflow: hidden;
  }
